--- a/offgridplanner/static/css/pages/demand_estimation.css
+++ b/offgridplanner/static/css/pages/demand_estimation.css
@@ -23,7 +23,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%; /* Take full height of the parent container */
+    height: 80%; /* Take full height of the parent container */
     width: 100%;  /* Take full width of the parent container */
     min-height: 500px; /* Set a minimum height to reserve space and prevent layout shifts */
+}
+
+.shares-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-row-gap: 10px;
+    align-items: center;
 }
