Replace favicon and old openPlan references

--- a/offgridplanner/templates/account/signup.html
+++ b/offgridplanner/templates/account/signup.html
@@ -14,7 +14,7 @@
 <main class="signup">
     <div class="signup-frame">
         <div class="signup-frame__img">
-            <img src="{% static 'assets/illustrations/open_plan_hero_hexagon.svg' %}" alt="open_plan cells">
+            <img src="{% static 'assets/logos/PeopleSunLogo.png' %}" alt="PeopleSun logo">
         </div>
         <div class="signup-frame__heading">
             {% translate "Welcome to the Offgridplanner" %}
