--- a/offgridplanner/templates/base-cookiecutter.html
+++ b/offgridplanner/templates/base-cookiecutter.html
@@ -115,7 +115,7 @@
               <div>
                 <div class="footer__logo">
                   <img src="{% static 'assets/logos/PeopleSunLogo.png' %}"
-                       alt="open_plan logo" />
+                       alt="PeopleSun logo" />
                 </div>
                 <div class="footer__links">
                   <ul>
