--- a/offgridplanner/templates/base.html
+++ b/offgridplanner/templates/base.html
@@ -14,11 +14,11 @@
     <link rel="icon"
           type="image/png"
           sizes="32x32"
-          href="{% static 'assets/favicon/favicon-32x32.png' %}" />
+          href="{% static 'assets/favicon/favicon.ico' %}" />
     <link rel="icon"
           type="image/png"
           sizes="16x16"
-          href="{% static 'assets/favicon/favicon-16x16.png' %}" />
+          href="{% static 'assets/favicon/favicon.ico' %}" />
     <link rel="manifest" href="{% static 'assets/favicon/site.webmanifest' %}" />
     <link rel="mask-icon"
           href="{% static 'assets/favicon/safari-pinned-tab.svg' %}"
@@ -34,7 +34,7 @@
           referrerpolicy="no-referrer" />
     <title>
       {% block title %}
-        open_plan
+        Offgridplanner
       {% endblock title %}
     </title>
     {% block head_block %}
@@ -81,7 +81,7 @@
         <div>
           <div class="footer__logo">
             <img src="{% static 'assets/logos/PeopleSunLogo.png' %}"
-                 alt="open_plan logo" />
+                 alt="PeopleSun logo" />
           </div>
           <div class="footer__links">
             <ul>
