Fix disabled fields not being included in POST request

--- a/offgridplanner/templates/pages/energy_system_design.html
+++ b/offgridplanner/templates/pages/energy_system_design.html
@@ -5,6 +5,11 @@
 {% load widget_tweaks %}
 {% load custom_template_tags %}
 
+{% block head_block %}
+<link href="{% static 'css/pages/energy_system_design.css' %}" rel="stylesheet">
+<link href="{% static 'css/main.css' %}" rel="stylesheet">
+{% endblock head_block %}
+
 {% block progression_content %}
 <main>
   <section class="dashboard">
