fixed structure of message modal, after required layout by bootstrap

--- a/offgridplanner/templates/messages.html
+++ b/offgridplanner/templates/messages.html
@@ -1,13 +1,17 @@
-{% if messages %}
-  {% for message in messages %}
-    <div class="alert {{ message.tags }} alert-dismissible" role="alert">
-      <button type="button"
-              class="close"
-              data-bs-dismiss="modal"
-              aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-      {{ message }}
-    </div>
-  {% endfor %}
-{% endif %}
+<div class="modal-content">
+  <div class="modal-body">
+    {% if messages %}
+      {% for message in messages %}
+        <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+          <button type="button"
+                  class="close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          {{ message }}
+        </div>
+      {% endfor %}
+    {% endif %}
+  </div>
+</div>
