--- a/offgridplanner/templates/messages.html
+++ b/offgridplanner/templates/messages.html
@@ -3,15 +3,17 @@
     {% if messages %}
       {% for message in messages %}
         <div class="alert {{ message.tags }} alert-dismissible" role="alert">
-          <button type="button"
-                  class="close"
-                  data-bs-dismiss="modal"
-                  aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
           {{ message }}
         </div>
       {% endfor %}
     {% endif %}
+  </div>
+  <div class="modal-footer">
+    <button type="button"
+              class="close"
+              data-bs-dismiss="modal"
+              aria-label="Close">
+        <span>&times;</span>
+      </button>
   </div>
 </div>
