--- a/offgridplanner/static/css/main.css
+++ b/offgridplanner/static/css/main.css
@@ -2532,7 +2532,8 @@ content: "7"; }
     .signup .signup-frame {
       width: 100%;
       max-width: 36rem;
-      padding: 4rem;
+      padding: 2rem;
+      margin-top: 6rem;
       background-color: #fff;
       box-shadow: 0px 0px 16px rgba(31, 86, 125, 0.08); }
       .signup .signup-frame__img {
