--- a/offgridplanner/templates/pages/consumer_selection.html
+++ b/offgridplanner/templates/pages/consumer_selection.html
@@ -352,7 +352,7 @@
       const removeBuildingsUrl = `{% url 'optimization:remove_buildings_inside_boundary' proj_id  %}`;
       window.onload = function () {
         //redirect_if_cookie_is_missing(true, true); //for anonymous user --> do it pythonside
-        db_nodes_to_js({{proj_id}}, false);
+        db_nodes_to_js({{proj_id}}, true);
         //show_email_and_project_in_navbar({{proj_id}});
         //TODO reenable video_tutorial
         //show_video_tutorial();
