--- a/offgridplanner/templates/pages/calculating.html
+++ b/offgridplanner/templates/pages/calculating.html
@@ -25,7 +25,7 @@
                         <hr>
                         <div id="loader" class="loader"></div>
                         <a>Status: </a>
-                        <a id="statusMsg">task status is retrieved...</a>
+                        <a id="statusMsg">Starting optimization...</a>
                         <hr>
                         {% if email_opt == true %}
                             <label class="switch">
