Get country bounds from project instead of hardcoded
Co-authored-by: Bachirou06 <djibo.bachirou06@gmail.com>
Co-authored-by: Bachibouzouk <pierre-francois.duc@rl-institut.de>

--- a/offgridplanner/templates/pages/simulation_results.html
+++ b/offgridplanner/templates/pages/simulation_results.html
@@ -560,6 +560,7 @@
 {% block end_body_scripts %}
     <script>
       const proj_id = '{{ proj_id }}';
+      const boundsDict = {{ bounds_dict | safe }};
       const dbNodesToJsUrl = `{% url 'optimization:db_nodes_to_js' proj_id %}`;
       const dbLinksToJsUrl = `{% url 'optimization:db_links_to_js' proj_id %}`;
       const loadPlotDataUrl = `{% url 'optimization:load_plot_data' proj_id %}`;
