Fix nodes to map js error on new projects

--- a/offgridplanner/templates/pages/consumer_selection.html
+++ b/offgridplanner/templates/pages/consumer_selection.html
@@ -347,7 +347,7 @@
       const boundsDict = {{ bounds_dict | safe }};
       const dbNodesToJsUrl = `{% url 'optimization:db_nodes_to_js' proj_id %}`;
       const dbLinksToJsUrl = `{% url 'optimization:db_links_to_js' proj_id %}`;
-      const fileNodesToJsUrl = `{% url 'optimization:file_nodes_to_js' %}`;
+      const fileNodesToJsUrl = `{% url 'optimization:file_nodes_to_js' proj_id %}`;
       const consumerToDBUrl = `{% url 'optimization:consumer_to_db' proj_id %}`;
       const addBuildingsUrl = `{% url 'optimization:add_buildings_inside_boundary' proj_id  %}`;
       const removeBuildingsUrl = `{% url 'optimization:remove_buildings_inside_boundary' proj_id  %}`;
