Fix location search leaflet tool

--- a/offgridplanner/templates/pages/consumer_selection.html
+++ b/offgridplanner/templates/pages/consumer_selection.html
@@ -269,7 +269,7 @@
                       <div id="search-container">
                         <input class="input-group-text"
                                id="search-input"
-                               placeholder="Search location within Nigeria"
+                               placeholder="Search location"
                                style="text-align: left"
                                type="text" />
                       </div>
