--- a/offgridplanner/templates/pages/calculating.html
+++ b/offgridplanner/templates/pages/calculating.html
@@ -79,6 +79,7 @@
 <script>
   const proj_id = '{{ proj_id }}';
   const csrfToken = '{{ csrf_token }}';
+  const lang = '{{ LANGUAGE_CODE }}';
   const startCalculationUrl = `{% url 'optimization:start_calculation' proj_id %}`;
   const waitingForResultsUrl = `{% url 'optimization:waiting_for_results' proj_id %}`;
   const processResultsUrl = `{% url 'optimization:process_optimization_results' proj_id %}`;
