--- a/offgridplanner/templates/pages/user_projects.html
+++ b/offgridplanner/templates/pages/user_projects.html
@@ -56,19 +56,24 @@
                       </td>
                       <td>
                         <span style="float:right;">
+                          <button class="grey_button">
                           <a onclick="document.getElementById('projectID{{ project.id }}').style.display='block'"
-                             class="grey_button"
                              style="color:white">Delete Project</a>
+                          </button>
                         </span>
                       </td>
                       <td>
                         <span style="float:right;">
-                          <a href="{% url 'steps:project_setup' project.id %}" class="grey_button">Edit Project</a>
+                          <button class="grey_button">
+                          <a href="{% url 'steps:project_setup' project.id %}">Edit Project</a>
+                          </button>
                         </span>
                       </td>
                       <td>
                         <span style="float:right;">
-                          <a href="{% url 'steps:simulation_results' project.id %}" class="grey_button">Show Results</a>
+                          <button class="grey_button">
+                          <a href="{% url 'steps:simulation_results' project.id %}" >Show Results</a>
+                          </button>
                         </span>
                       </td>
                     </tr>
